# brikensushi

./: .gitmodules  README.md
dev/offlinecmake/: CMakeLists.txt
dev/offlinecmake/include/: libDataStruct.h  libDataStructLinkDef.h  myanalysis.h  sorter.h
dev/offlinecmake/src/: myanalysis.cc  sorter.cc
lowerthreshold/: .~lock.threshold_sigma.ods#  calibdata  dosort.sh  dosort.sh~  dosortion.sh  fitpeakgetthreshold.C  list1calib.list  list1calib.list~  listallNb115.list  listallbeamrootfiles.txt  listallcalib.list  listallcalib.list~  listallruns.list  offline3  outrootfiles  sorter.C  sorter_ion.C  test.list  threshold_sigma.ods  tree.cpp
merger/: 171119_1435_115Nb_054_171119_1435_115Nb_055_RunConf.csv  CMakeLists.txt  He3_mapping.txt  belenreader.cc  main.cc  pidfile.txt
merger/include/: BELEN.hh  BELENLinkDef.hh  BELENdefs.hh  BRIKENTreeData.hh  BRIKENTreeDataLinkDef.hh  Beam.hh  BeamLinkDef.hh  BelenReader.hh  Clover.hh  CloverLinkDef.hh  Cloverdefs.hh  DataStruct.hh  DataStructLinkDef.hh  Merger.hh  Wasabi.hh  Wasabidefs.hh
merger/src/: BELEN.cc  BRIKENTreeData.cc  BelenReader.cc  Clover.cc  DataStruct.cc  Merger.cc  Wasabi.cc
offline3/: DataStruct_dict.C  DataStruct_dict_rdict.pcm  aidaclass_h.d  aidaclass_h_ACLiC_dict_rdict.pcm  myanalysis_cc.d  pdecoder_dict.C  pdecoder_dict_rdict.pcm  runbash.sh  sorter_C_ACLiC_dict.cxx  sorter_C_ACLiC_dict_rdict.pcm  sorter_C_ACLiC_linkdef.h  sorter_C_ACLiC_map.in  sorter_C_ACLiC_map.out  tree.h  tree_nochain.cpp
offline4/: aidaclass_h_ACLiC_dict_rdict.pcm  dosort.C  dosort.sh  dssdconfiglowe_3sigmabeam_40keVthr.txt  dssdconfiglowe_4sigmabeam.txt  dssdconfiglowe_5sigmabeam_60keVthr.txt  listexistingbeamrunrootfiles.txt  outrootfiles  runall.sh  runlist.txt  runsep1.sh  runsep2.sh  runsep3.sh  runsep4.sh  runsep5.sh  runsep6.sh  runsep7.sh  runsep8.sh  sorter.C  sorter_C.d  sorter_C_ACLiC_dict_rdict.pcm  tree.cpp  tree.h  wasabiclass.h  wasabiclass_h.d  wasabiclass_h_ACLiC_dict_rdict.pcm
offline4/list/: list_wasabi4013to4015.txt  list_wasabi4016to4031.txt  list_wasabi4032to4035.txt  list_wasabi4036to4042.txt  list_wasabi4042to4047.txt  list_wasabi4048to4060.txt  list_wasabi4061to4081.txt  list_wasabi4082to4092.txt  list_wasabi4094to4124.txt  list_wasabi4125to4153.txt  list_wasabi4154to4186.txt  list_wasabi4187to4219.txt  list_wasabi4220to4249.txt  list_wasabi4250to4251.txt  list_wasabi4252to4254.txt  list_wasabi4255to4257.txt  list_wasabi4257to4289.txt  list_wasabi4290to4324.txt  list_wasabi4325to4332.txt  list_wasabi4333to4345.txt  list_wasabi4346to4362.txt  list_wasabi4363to4391.txt  list_wasabi4392to4416.txt  list_wasabi4417to4443.txt  list_wasabi4444to4471.txt  list_wasabi4472to4503.txt  list_wasabi4505to4533.txt  list_wasabi4533to4561.txt  list_wasabi4562to4572.txt  list_wasabi4573to4602.txt  list_wasabi4603to4610.txt  list_wasabi4611to4644.txt  list_wasabi4646to4679.txt  list_wasabi4680to4710.txt  list_wasabi4711to4741.txt  list_wasabi4742to4743.txt  list_wasabi4742to4773.txt  list_wasabi4774to4791.txt  list_wasabi4792to4799.txt  list_wasabi4800to4834.txt  (+47 more)
offlinecmake/: CMakeLists.txt
offlinecmake/include/: libDataStruct.h  myanalysis.h
offlinecmake/src/: myanalysis.cc
pidana/: .~lock.pidcalculations.ods#  fit_aoq_command.txt  fit_zet.root  fit_zet.txt  listBrSet.txt  listNbSet.txt  listall.txt  pid.root  pidcalculations.ods  plotpid.C  remergedfiles  results_aoqcut.txt  test.txt  z32.txt  z32_res.txt  z33.txt  z33_res.txt  z34.txt  z34_res.txt  z35.txt  z35_res.txt  z36.txt  z36_res.txt  z37.txt  z37_res.txt  z38.txt  z38_res.txt  z39.txt  z39_res.txt  z40.txt  z40_res.txt  z41.txt  z41_res.txt  z42.txt  z42_res.txt  z43.txt  z43_res.txt  z44.txt  z44_res.txt  z45.txt  (+4 more)
recalib/: .~lock.calib_table.ods#  calib_table.ods  calibspec.C  dssdconfiglowe.txt  fitpulse.C  outrootfiles  result_calibtableX.txt  sorter_C.d  sorter_C_ACLiC_dict_rdict.pcm
recalib/intrinsicscal/makecalfile/: calib_range.ods  (+16 more)
recalib/recalib_Bi207/: aidaclass_h_ACLiC_dict_rdict.pcm  calib_table.ods  calibspecall.C  dssdconfiglowe_adc.txt  fitpulse.C  result_calibtableY.txt  sorter.C
runsummary/: .~lock.runsummary.ods#  listallmergedrootfiles.txt  runsummary.ods
(+100 files in other folders)
